--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ margin: 0 auto;
 .article-content {
   background: var(--Base-White, #fff);
   display: flex;
-  width: 100%;
+/*   width: 100%; */
   flex-direction: column;
-  align-items: center;
+/*   align-items: center; */
   padding: 15px 70px;
 }
 
@@ -123,7 +123,7 @@ margin: 0 auto;
 }
 
 .quote-container {
-  margin-left: 170px;
+/*   margin-left: 170px; */
   width: 621px;
   max-width: 100%;
 }
@@ -185,7 +185,7 @@ margin: 0 auto;
 
 .article-paragraph {
   font-feature-settings: "liga" off, "clig" off;
-  width: 100%;
+  width: 623px;
   background: var(--Base-White, #fff);
   color: var(--Base-Grey-85, #4b5157);
   padding: 15px 70px;
