--- a/style.css
+++ b/style.css
@@ -220,11 +220,11 @@ margin: 0 auto;
 }
 
 .divider {
-  background: var(--Base-Grey-15, #d9dadb);
+  color: var(--Base-Grey-15, #d9dadb);
   width: 653px;
   max-width: 100%;
-  height: 1px;
-  margin: 29px 0 0 210px;
+/*   height: 1px; */
+  margin: 29px 0 0 70px;
 }
 
 .social-section {
