--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ margin: 0 auto;
 
 .social-button {
   border-radius: 20px;
+  border: none;
   display: flex;
   gap: 10px;
   padding: 10px 23px;
@@ -264,7 +265,7 @@ margin: 0 auto;
 .social-icon {
   aspect-ratio: 1;
   object-fit: contain;
-  width: 20px;
+/*   width: 20px; */
 }
 
 .social-text {
