--- a/style.css
+++ b/style.css
@@ -358,7 +358,8 @@ margin: 0 auto;
   width: 750px;
   max-width: 100%;
   gap: 20px;
-  color: var(--Base-Grey-100, #262d33);
+  color: var(--Base-White, #fff);
+/*   --Base-Grey-100, #262d33 */
   flex-wrap: wrap;
   justify-content: space-between;
 }
