--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ margin: 0 auto;
 
 .add-comment {
   border-radius: 20px;
-  border: 1px solid var(--Base-Grey-15, #d9dadb);
+  border: 1px solid var(--Base-White, #fff);
   display: flex;
   gap: 10px;
   margin: auto 0;
