--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ margin: 0 auto;
 
 .add-comment {
   border-radius: 20px;
-  border: 1px solid var(--Base-White, #fff);
+  border: 1px solid var(--Base-Grey-05, #f5f5f5);
   display: flex;
   gap: 10px;
   margin: auto 0;
