--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ margin: 0 auto;
   width: 800px;
   max-width: 100%;
 /*   height: 1px; */
-  margin: 29px 0 0 70px;
+  margin: 29px 2px 0 0px;
 }
 
 .social-section {
