--- a/style.css
+++ b/style.css
@@ -345,9 +345,9 @@ margin: 0 auto;
 }
 
 .comments-section {
-  display: flex;
+/*   display: flex; */
   margin-top: 93px;
-  width: 100%;
+  width: 1000px;
   padding-left: 80px;
   flex-direction: column;
   align-items: center;
