--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ margin: 0 auto;
   display: flex;
 }
 
+.ramka{
+ top:70px;
+ left:115px;
+ width:595px;
+ height:130px;
+}
+
 .main-text {
   display: flex;
   flex-direction: column;
