--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ margin: 0 auto;
   color: var(--Base-Grey-15, #d9dadb);
   width: 800px;
   max-width: 100%;
+  margin-left: 70px;
 /*   height: 1px; */
 /*   margin: 29px 2px 0 0px; */
 }
