--- a/style.css
+++ b/style.css
@@ -408,6 +408,18 @@ body {
   padding: 75px 35px;
 }
 
+.form-block {
+  border-radius: 10px;
+  background-color: rgba(245, 245, 245, 1);
+  display: flex;
+  width: 750px;
+  max-width: 100%;
+  flex-direction: column;
+  align-items: start;
+  fill: var(--Base-Grey-05, #f5f5f5);
+  padding: 75px 35px;
+}
+
 .form-title {
   color: var(--Base-Grey-100, #262d33);
   font-feature-settings: "liga" off, "clig" off;
