--- a/style.css
+++ b/style.css
@@ -412,7 +412,8 @@ body {
   border-radius: 10px;
   background-color: rgba(245, 245, 245, 1);
   display: flex;
-  width: 750px;
+  width: 1366px;
+  heigh: 425px;
   max-width: 100%;
   flex-direction: column;
   align-items: start;
