--- a/style.css
+++ b/style.css
@@ -420,6 +420,16 @@ body {
   fill: var(--Base-Grey-05, #f5f5f5);
   padding: 75px 35px;
 }
+.block-form {
+  background: var(--Base-White, #fff);
+  align-self: stretch;
+  display: flex;
+  margin-top: 14px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 80px;
+  margin-left: -45px;
 
 .form-title {
   color: var(--Base-Grey-100, #262d33);
