--- a/style.css
+++ b/style.css
@@ -432,10 +432,10 @@ body {
   margin-left: -45px;
 } */
 .rectangle {
-    width: 263px;
-    height: 170px;
-    background-color: white;
-    border-radius: 10px;
+    width: 1366px;
+    height: 425px;
+    background-color: #cecece;
+    /* border-radius: 10px; */
 }
 
 .form-title {
