--- a/style.css
+++ b/style.css
@@ -455,6 +455,22 @@ body {
   height: 180px; /* Высота фотографии */
   border-radius: 10px; /* Закругление границ */
 }
+.photo3 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 60px; /* Отступ сверху */
+  left: 698px; /* Отступ слева */
+  width: 263px; /* Ширина фотографии */
+  height: 180px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.photo4 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 60px; /* Отступ сверху */
+  left: 990px; /* Отступ слева */
+  width: 263px; /* Ширина фотографии */
+  height: 180px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
 
 .form-title {
   color: var(--Base-Grey-100, #262d33);
