--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ body {
     position: relative;
     width: 1366px;
     height: 425px;
-    background-color: #cecece;
+    background-color: #F5F5F5;
     /* border-radius: 10px; */
 }
 
@@ -470,6 +470,23 @@ body {
   width: 263px; /* Ширина фотографии */
   height: 180px; /* Высота фотографии */
   border-radius: 10px; /* Закругление границ */
+}
+
+.text1{
+  position: absolute;
+  top: 255px; /* Отступ сверху */
+  left: 113px; /* Отступ слева */
+  width: 263px; /* Ширина рамки */
+  height: 50; /* Высота рамки */
+  display: flex; /* Используем flexbox для центрирования текста */
+  justify-content: left; /* Горизонтальное центрирование */
+  align-items: left; /* Вертикальное центрирование */
+  font-family: 'Roboto Slab', serif; /* Шрифт Roboto Slab */
+  font-weight: bold; /* normal */
+  letter-spacing: 0.0px;
+  line-height: 25px;
+  font-size: 16px; /* Размер шрифта */
+  color: #262D33; /* Цвет текста */
 }
 
 .form-title {
