--- a/style.css
+++ b/style.css
@@ -472,6 +472,39 @@ body {
   border-radius: 10px; /* Закругление границ */
 }
 
+.eye1 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 113px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.eye2 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 405px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.eye3 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 698px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.eye4 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 990px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+
 .text1{
   position: absolute;
   top: 255px; /* Отступ сверху */
