--- a/style.css
+++ b/style.css
@@ -496,10 +496,43 @@ body {
   height: 15px; /* Высота фотографии */
   border-radius: 10px; /* Закругление границ */
 }
-.eye4 {
+.com4 {
   position: absolute; /* Абсолютное позиционирование для точного размещения */
   top: 320px; /* Отступ сверху */
   left: 990px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+
+.com1 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 174px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.com2 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 466px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.com3 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 749px; /* Отступ слева */
+  width: 15px; /* Ширина фотографии */
+  height: 15px; /* Высота фотографии */
+  border-radius: 10px; /* Закругление границ */
+}
+.com4 {
+  position: absolute; /* Абсолютное позиционирование для точного размещения */
+  top: 320px; /* Отступ сверху */
+  left: 1051px; /* Отступ слева */
   width: 15px; /* Ширина фотографии */
   height: 15px; /* Высота фотографии */
   border-radius: 10px; /* Закругление границ */
