--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ body {
   height: 15px; /* Высота фотографии */
   border-radius: 10px; /* Закругление границ */
 }
-.com4 {
+.eye4 {
   position: absolute; /* Абсолютное позиционирование для точного размещения */
   top: 320px; /* Отступ сверху */
   left: 990px; /* Отступ слева */
