--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ body {
 }
 
 .quote-text {
+  position: relative;
   display: flex;
   flex-direction: column;
   line-height: normal;
@@ -147,19 +148,19 @@ body {
 }
 
 .quote-content {
-  position: relative;
   color: var(--Base-Grey-100, #262d33);
   font-feature-settings: "liga" off, "clig" off;
   font: 700 25px/30px Roboto Slab, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
-.quoteimg{
-  position: absolute;
+.quote-icon {
+  position: absolute; /* Абсолютное позиционирование для изображения */
   top: 10px; /* Отступ сверху */
   left: 10px; /* Отступ слева */
-  width: 70px; /* Ширина фотографии */
-  height: 70px; /* Высота фотографии */
+  width: 70px; /* Ширина изображения */
+  height: 70px; /* Высота изображения */
 }
+
 .author-column {
   display: flex;
   flex-direction: column;
