--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ body {
 }
 
 .quote-content {
+  position: relative; /* Относительное позиционирование для текста */
+  z-index: 1; /* Помещаем текст на передний план */
   color: var(--Base-Grey-100, #262d33);
   font-feature-settings: "liga" off, "clig" off;
   font: 700 25px/30px Roboto Slab, -apple-system, Roboto, Helvetica, sans-serif;
@@ -159,6 +161,7 @@ body {
   left: 10px; /* Отступ слева */
   width: 70px; /* Ширина изображения */
   height: 70px; /* Высота изображения */
+  z-index: -1; /* Помещаем изображение за текстом */
 }
 
 .author-column {
